drop jdk8 and 11